@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T01:15:32Z",
-  "count" : 11,
-  "count_minmax" : [ 7, 11 ],
-  "count_decinc" : [ -0, +11 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 4, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "timestamp" : "2022-06-03T08:21:25Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 11 ],
+  "count_decinc" : [ -8, +11 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 7 ],
+  "uniques_decinc" : [ -4, +7 ]
 }
