@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-06-03T01:22:46Z",
+  "timestamp" : "2022-06-03T08:21:25Z",
   "count_outdated" : 2121,
   "uniques_outdated" : 409,
-  "count" : 2158,
-  "uniques" : 433,
+  "count" : 2151,
+  "uniques" : 430,
   "clones" : [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 7, 11 ],
-      "uniques": 7,
-      "uniques_minmax": [ 4, 7 ]
+      "count": 3,
+      "count_minmax": [ 3, 11 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 7 ]
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
