@@ -1,11 +1,11 @@
 {
-  "count": 37,
-  "uniques": 16,
+  "count": 30,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 11,
-      "uniques": 7
+      "count": 3,
+      "uniques": 3
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
